--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ body {
   text-rendering: optimizeLegibility;
   -moz-osx-font-smoothing: grayscale;
   height: 100%;
+  overflow-x: hidden;
 }
 html {
   height: 100%;
@@ -423,18 +424,13 @@ p{
   font-size: 70px !important;
 }
 .navbar {
-  width: 100vw;
-  position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
-  padding: 50px;
-  display: block;
+  width: 100%;
+  padding: 10px 50px;
   z-index: 2;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-
-
 
 .navbar.dark .navbar-nav .nav-item {
   position: relative;
@@ -446,10 +442,11 @@ p{
   color: #393c3f;
 }
 .navbar .navbar-brand {
-  float: left;
-  position: absolute;
-  left: 0;
-  padding-left: 20px;
+  float: none;
+  position: relative;
+  left: auto;
+  padding: 0;
+  margin-right: auto;
 }
 .navbar .navbar-brand img {
   height: 100px;
@@ -464,6 +461,7 @@ p{
 .navbar .navbar-nav {
   float: right;
   display: block;
+  margin-left: auto;
 }
 .navbar .navbar-nav .nav-item {
   float: left;
@@ -3240,7 +3238,7 @@ p{
   position: relative;
   -webkit-transition: 0.25s ease-in-out;
   transition: 0.25s ease-in-out;
-  height: 600px;
+  height: 400px;
 }
 .reviews .review:hover {
   -webkit-box-shadow: 0px 10px 10px 5px rgba(153, 153, 153, 0.2);
