--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ body {
   height: 100%;
   overflow-x: hidden;
   -ms-overflow-style: none;
+  line-height: 1.6;
 }
 
 /* Custom Scrollbar - Black and Orange Theme */
