--- a/css/style.css
+++ b/css/style.css
@@ -463,7 +463,7 @@ p{
 }
 .navbar {
   width: 100%;
-  padding: 10px 50px;
+  padding: 10px 0;
   z-index: 2;
   display: flex;
   justify-content: space-between;
